has been created basic connetion w database and some controllers

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/node-telegram-bot-api": "^0.64.7",
     "nodemon": "^3.1.4",
     "prisma": "^5.17.0"
