--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ DB_USER="postgres"
 DB_PASSWORD="admin"
 DB_HOST="localhost"
 DB_PORT="5432"
+SECRET_KEY="HAMSTER-KILLER-SUPER-SECRET-KEY-1488-MONEY-FARMING-2001"
