--- a/package.json
+++ b/package.json
@@ -7,18 +7,24 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "docker": "^1.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.1",
+    "jsonwebtoken": "^9.0.2",
+    "mobx-react-lite": "^4.0.7",
     "mysql": "^2.18.1",
     "mysql2": "^3.10.3",
     "node-telegram-bot-api": "^0.66.0",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "sequelize": "^6.37.3",
     "uuid": "^10.0.0",
